# csheet

./: .buildinfo  .coveragerc  .dockerignore  .drone.yml  .env  .env.example  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .graphqlconfig  .npmrc  .pnpmfile.cjs  .prettierignore  .pylintrc  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  addtional_watch_worker.ps1  apollo.config.js  babel.config.js  build.py  build_image.ps1  clear_lock.py  csheet.code-workspace  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  fragment-types.json  generate_crt.ps1  genindex.html  glossary.html  go.mod  go.sum  gqlgen.yml  index.html  (+28 more)
docs/: Dockerfile  Makefile  conf.py  pyproject.toml
docs/server/: Makefile  api.rst  collectors.rst  conf.py  db.rst  deployment.rst  env-vars.rst  file-store.rst  folder.rst  index.rst  models.rst  route.rst  transcode.rst  video.rst
docs/web/: Makefile  conf.py  index.rst  views.rst
server/: .coveragerc  .env  Makefile  alembic.ini  api.html  archive.html  cgteamwork.html  collection.html  collectors.html  database-migration.html  db.html  deployment.html  dev-requirements.txt  development.html  entrypoint.sh  env-vars.html  file-store.html  file-watch.html  filecache.html  filestore.html  folder.html  gallary.html  gallery.html  glossary.html  index.html  models.html  page.html  pyproject.toml  requirements.txt  route.html  transcode.html  video.html
server/alembic/: env.py
server/collectors/: cgteamwork.html  folder.html
server/csheet/: __about__.py  __init__.py  __main__.py  context_processors.py  core.py  default_settings.py  exceptions.py  filecache.py  filepath.py  filetools.py  generation.py  video.py  watch.py
server/db/: asset.html  content.html
(+1008 files in other folders)
