[tool.poetry]
name = "csheet-doc"
version = "0.1.0"
description = "Docs for csheet"
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
classifiers = [
    'Private :: Do Not Upload',
]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^2.2"
recommonmark = "0.6.0"
jieba = "^0.39"
plantweb = {path = "vendor/plantweb-1.2.1-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
rstcheck = "3.3.1"
autopep8 = "==1.5.5"

[[tool.poetry.source]]
# Required for use mirror, see https://github.com/python-poetry/poetry/issues/1632
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
